added images into index.html

--- a/index.html
+++ b/index.html
@@ -5,11 +5,53 @@
 
   <meta charset="UTF-8">
 
-  <title></title>
+  <title>Slideshow</title>
 
 </head>
 
 <body>
+
+  <div class="slideshow-container">
+    <div class="mySlides fade">
+      <div class="numbertext">1 / 5</div>
+      <img src="images/Banner_Steeple.jpg" style="width:100%">
+      <div class="text">Steeples</div>
+    </div>
+
+    <div class="mySlides fade">
+      <div class="numbertext">2 / 5</div>
+      <img src="images/Banner_Roofs.jpg" style="width:100%">
+      <div class="text">Roofs</div>
+    </div>
+
+    <div class="mySlides fade">
+      <div class="numbertext">3 / 5</div>
+      <img src="images/Banner_Masonry.jpg" style="width:100%">
+      <div class="text">Masonry</div>
+    </div>
+
+    <div class="mySlides fade">
+      <div class="numbertext">3 / 5</div>
+      <img src="images/Banner_Windows.jpg" style="width:100%">
+      <div class="text">Windows</div>
+    </div>
+
+    <div class="mySlides fade">
+      <div class="numbertext">3 / 5</div>
+      <img src="images/Banner_Interiors.jpg" style="width:100%">
+      <div class="text">Interiors</div>
+    </div>
+
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+  </div>
+  <br>
+
+  <div style="text-align:center">
+    <span class="dot" onclick="currentSlide(1)"></span>
+    <span class="dot" onclick="currentSlide(2)"></span>
+    <span class="dot" onclick="currentSlide(3)"></span>
+  </div>
 
 </body>
 
