--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 
   <meta charset="UTF-8">
 
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>Slideshow</title>
+
+  <link rel="stylesheet" media="screen" href="css/style.css">
 
 </head>
 
