added javascript to initialize slideshow

--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
     <span class="dot" onclick="currentSlide(5)"></span>
   </div>
 
+  <script src="js/slideshow.js"></script>
+
 </body>
 
 </html>
